# give-me-some-credit-ml-security

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda_preprocessing.ipynb
